Fix vertical alignment of input element in react-select.

--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -64,6 +64,7 @@
 		outline: none;
 		max-width: 100%;
 		overflow: hidden;
+		vertical-align: middle;
 
 		> input {
 			border: none;
